# dir-diff

./: .clippy.toml  .clog.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/workflows/: ci.yml
src/: error.rs  iter.rs  lib.rs  main.rs
tests/: smoke.rs
tests/content_mismatch/dir2/: test.txt
tests/file_length_mismatch/dir2/: a.txt
tests/fileanddir/dir2/: name
tests/missing_file/dir1/: a.txt
